2007-06-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/OpCodes.cs:
	  CodeGen/cecil.xml:
		leave.s is a macro instruction.

	* Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/ParameterDefinition.cs:
		Fix cloning.

2007-06-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs:
		Fix custom mods for fields ref.

2007-06-13  Jb Evain  <jbevain@novell.com>

	Integrated patches by:
	Paul Apostolescu <papostolescu@fortifysoftware.com>

	* patch3:
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		In named args, objects are encoded as boxed.

	* patch1:
	  Mono.Cecil/IMemberDefinition.cs
	  Mono.Cecil/Constants.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs:
		Do not take into account special _Deleted
		members.

	* patch6:
	  Mono.Cecil/StructureReader.cs:
		Read the flags of the references as well.

	* patch5:
	  Mono.Cecil.Metadata/UserStringsHeap.cs:
		Don't bother getting a string from the bytes
		if the length is < 2 (0, or 0 + an encoding flag)

	* patch4:
	  Mono.Cecil/ReflectionHelper.cs:
		Update the value type flags of types
		when they are imported if the type
		reference was first seen as a type reference.

	* patch2:
	  Mono.Cecil.Signature/SignatureWriter.cs:
		Patch to handle nullref values for types in
		custom attributes arguments.

2007-06-13  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs,
	  Mono.Cecil/ReflectionWriter.cs:
		Revert the on demand creation of memberref.

2007-06-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/CallSite.cs
	  Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/AssemblyDefinition.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/AssemblyNameReference.cs
	  Mono.Cecil/MemberReference.cs
	  Mono.Cecil/Resource.cs
	  Mono.Cecil/ParameterReference.cs:
		Implement explicitely IAnnotationProvider.

2007-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyNameReference.cs: